--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una herramienta muy efectiva para el Evangelismo “PERSONA A PERSONA”. </li><li>Es portátil.
- </li> <li>Consta de una secuencia de 7 ILUSTRACIONES, que podrás visualizar y mostrarle a las personas desde la PANTALLA DE TU CELULAR, cada vez que evangelices. </li> <li> ¡Y ya incluye 7 ESCRITURAS para que se las leas desde allí! Además incluye la CONFESIÓN DE SALVACIÓN</li>
+ </li> <li>Consta de una secuencia de 7 ILUSTRACIONES, que podrás visualizar y mostrarle a las personas desde la PANTALLA DE TU CELULAR, cada vez que evangelices. </li> <li> ¡Y ya incluye 7 ESCRITURAS para que se las leas desde allí!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li>
   </ul>
             </div>
         </div>
