--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             </div>
         </div>
     </div>
-<div class="contact">
-    <p>CONTACTO:</p>
+    <div class="contact">
+    <p>Si voluntariamente deseas donar, sembrar u ofrendar para apoyar la elaboración de nuevos materiales escribe a:</p>
     <p><a href="mailto:tucorreo@ejemplo.com">evangelismoalternativo@gmail.com</a></p>
 </div>
 </body>
