--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
     <div class="contact">
-    <p>Si voluntariamente deseas donar, sembrar u ofrendar para apoyar la elaboración de nuevos materiales escribe a:</p>
+    <p>Si voluntariamente deseas ofrendar, sembrar o donar para que sigamos elaborando nuevos materiales escribe a:</p>
     <p><a href="mailto:tucorreo@ejemplo.com">evangelismoalternativo@gmail.com</a></p>
 </div>
 </body>
