--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
     <div class="contact">
-    <p><i>Si voluntariamente deseas ofrendar, sembrar o donar para que sigamos elaborando nuevos materiales escribe a:</i></p>
+    <p><i>Si voluntariamente deseas ofrendar, sembrar o donar para que sigamos produciendo nuevos materiales escribe a:</i></p>
     <p><a href="mailto:tucorreo@ejemplo.com">evangelismoalternativo@gmail.com</a></p>
 </div>
 </body>
