--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         h1 {
             font-size: 3em;
             margin: 20px 0;
-            color: #FF7F7F; /* Cambia el color del título a rojo */
+            color: #87CEEB; /* Celeste claro*/
             line-height: 1; /* Ajusta la altura de línea para que parezca un solo título */
         }
         .image-container {
@@ -83,12 +83,12 @@
 
 
 .subtitle {
-    color: #FF9999; /* Color rojo */
+    color: #ff9999; /* Color de la estrella */
        font-weight: bold; /* Negrita */
     margin: 0; /* Elimina el margen superior e inferior */
   }
 .link {
-    color: #FF7F7F; /* Rojo claro */
+    color: #ff9999; /* Color de la estrella */
     text-decoration: none; /* Sin subrayado */
 }
 
