--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
              <p class="subtitle">"i7" EVANGELIZA FÁCIL</p>
              </a>      
   <ul class="check-list">         
-             <li><strong>¡ES GRATIS!</strong></li><li>Es una herramienta muy efectiva para el Evangelismo “PERSONA A PERSONA”. </li><li>Es portátil.
- </li> <li>Consta de una secuencia de 7 ILUSTRACIONES, que podrás visualizar y mostrarle a las personas desde la PANTALLA DE TU CELULAR, cada vez que evangelices. </li> <li> ¡Y ya incluye 7 ESCRITURAS para que se las leas desde allí!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li>
+             <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta muy efectiva para Evangelizar PERSONA A PERSONA. </li>
+ <li>Consta de una secuencia de 7 ILUSTRACIONES, para que le muestres a las personas desde la PANTALLA DE TU CELULAR para Evangelizarlas. </li> <li> ¡Incluye 7 ESCRITURAS!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li><li>Es portátil.</li>
   </ul>
             </div>
         </div>
