--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
  <li>Consta de una secuencia de 7 ILUSTRACIONES, para que le muestres a las personas desde la PANTALLA DE TU CELULAR para Evangelizarlas. </li> <li> ¡Incluye 7 ESCRITURAS!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li><li>Es portátil.</li>
   </ul>
             </div>
+  </div>
+<div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank">
+                <img src="imagen3.jpg" alt="Imagen 3">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank" class="link">
+             <p class="subtitle">CRUZ EMOJI</p>
+             </a>      
+  <ul class="check-list">         
+             <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
+ <li>Cabe en un bolsillo y la persona la desdoblará paso a paso para descubrirla.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, para que la explore ella misma cuando tenga tiempo. (Ejemplo: Alguien muy apurado u ocupado) 
+</li><li>Se puede imprimir y sacarle fotocopias.  </li> 
+  </ul>
+            </div>
         </div>
     </div>
     <div class="contact">
