--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta muy efectiva para Evangelizar PERSONA A PERSONA. </li>
- <li>Consta de una secuencia de 7 ILUSTRACIONES, para que le muestres a las personas desde la PANTALLA DE TU CELULAR para Evangelizarlas. </li> <li> ¡Incluye 7 ESCRITURAS!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li><li>Es portátil.</li>
+ <li>Son 7 ILUSTRACIONES para que le muestres a las personas desde la PANTALLA DE TU CELULAR para Evangelizarlas. </li> <li> ¡Incluye 7 ESCRITURAS!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li><li>Es portátil.</li>
   </ul>
             </div>
   </div>
@@ -156,7 +156,7 @@
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
- <li>Cabe en un bolsillo y la persona la desdoblará paso a paso para descubrirla.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, para que la explore ella misma cuando tenga tiempo. (Ejemplo: Alguien muy apurado u ocupado) 
+ <li>Cabe en un bolsillo.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, ellas misma la desdoblará paso a paso para descubrirla.
 </li><li>Se puede imprimir y sacarle fotocopias.  </li> 
   </ul>
             </div>
