--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
- <li>Cabe en un bolsillo.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, ellas misma la desdoblará paso a paso para descubrirla.
+ <li>Cabe en un bolsillo.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, ellas mismas la desdoblarán paso a paso para descubrirla.
 </li><li>Se puede imprimir y sacarle fotocopias.  </li> 
   </ul>
             </div>
