--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
             </div>
   </div>
 <div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-titeres-curso-practico/272138943" target="_blank">
+                <img src="imagen4.jpg" alt="Imagen 4">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-titeres-curso-practico/272138943" target="_blank" class="link">
+             <p class="subtitle">EVANGELISMO ALTERNATIVO CON TÍTERES - CURSO PRÁCTICO</p>
+             </a>      
+  <ul class="check-list">         
+             <li><strong>¡ES GRATIS!</strong></li>
+ <li>Aprende a Evangelizar con TÍTERES y que cientos de Personas reciban a Cristo como su Señor y Salvador.</li> <li>¡Haz que 100 personas reciban a Cristo en 1 hora!
+</li><li>Campaña Masiva y Persona a Persona. </li> <li>Incluye PRÁCTICAS</li>
+  </ul>
+            </div>
+        </div>
+        <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank">
                 <img src="imagen3.jpg" alt="Imagen 3">
             </a>
