--- a/index.html
+++ b/index.html
@@ -176,6 +176,21 @@
   </ul>
             </div>
         </div>
+        <div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/guion-de-titeres-evangelistico-el-checho-evangelismo-alternativo/272181583" target="_blank">
+                <img src="imagen6.jpg" alt="Imagen 6">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/guion-de-titeres-evangelistico-el-checho-evangelismo-alternativo/272181583" target="_blank" class="link">
+             <p class="subtitle">GUIÓN DE TITERES EVANGELÍSTICO "EL CHECHO" - Evangelismo Alternativo</p>
+             </a>      
+  <ul class="check-list">         
+             <li><strong>¡ES GRATIS!</strong></li><li>GUIÓN de TÍTERES para EVANGELIZAR en Campaña Masiva.</li>
+ <li>¡Harás que 100 personas reciban a Cristo en 1 hora!</li> <li>La mejor Herramienta de Evangelismo Alternativo para Campaña Masiva.
+</li>
+  </ul>
+            </div>
+        </div>
     </div>
     <div class="contact">
     <p>Si voluntariamente deseas ofrendar, sembrar o donar para que sigamos produciendo nuevos materiales escribe a:</p>
