--- a/index.html
+++ b/index.html
@@ -156,11 +156,26 @@
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
- <li>Aprende a Evangelizar con TÍTERES y que cientos de Personas reciban a Cristo como su Señor y Salvador.</li> <li>¡Haz que 100 personas reciban a Cristo en 1 hora!
+ <li>Aprende a Evangelizar con TÍTERES</li> <li>¡Haz que 100 personas reciban a Cristo en 1 hora!
 </li><li>Campaña Masiva y Persona a Persona. </li> <li>Incluye PRÁCTICAS</li>
   </ul>
             </div>
         </div>
+<div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-clown-curso-practico/272185803" target="_blank">
+                <img src="imagen7.jpg" alt="Imagen 7">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-clown-curso-practico/272185803" target="_blank" class="link">
+             <p class="subtitle">EVANGELISMO ALTERNATIVO CON CLOWN - CURSO PRÁCTICO</p>
+             </a>      
+  <ul class="check-list">         
+             <li><strong>¡ES GRATIS!</strong></li>
+ <li>Aprende a Evangelizar con CLOWN.</li> <li>¡Las personas recibirán a Cristo una tras otra sin rechazar!
+</li><li>Persona a Persona. </li> <li>Incluye PRÁCTICAS</li>
+  </ul>
+            </div>
+        </div>        
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank">
                 <img src="imagen3.jpg" alt="Imagen 3">
