--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p class="subtitle">CURSO PRÁCTICO DE EVANGELISMO ALTERNATIVO</p>
             </a>
   <ul class="check-list">
-                <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 personas reciban a Cristo en 1 hora!</li><li> ¿Quieres aprender Estrategias distintas a las tradicionales?</li> <li>¿Quieres Evangelizar aunque no sepas hablar bien?</li><li> Persona a Persona y Campaña Masiva.</li>
+                <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!</li><li> ¿Quieres aprender ESTRATEGIAS DISTINTAS a las tradicionales?</li> <li>¿Quieres Evangelizar aunque NO SEPAS HABLAR bien?</li><li> Persona a Persona y Campaña Masiva.</li>
   </ul>
             </div>
         </div>
@@ -152,30 +152,48 @@
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-titeres-curso-practico-cristiano/272179524" target="_blank" class="link">
-             <p class="subtitle">EVANGELISMO ALTERNATIVO CON TÍTERES - CURSO PRÁCTICO</p>
+             <p class="subtitle">EVANGELISMO CON TÍTERES - Curso Práctico de Evangelismo Alternativo</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
- <li>Aprende a Evangelizar con TÍTERES</li> <li>¡Haz que 100 personas reciban a Cristo en 1 hora!
+ <li>Aprende a Evangelizar con TÍTERES</li> <li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!
 </li><li>Campaña Masiva y Persona a Persona. </li> <li>Incluye PRÁCTICAS</li>
   </ul>
             </div>
         </div>
+        
 <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-clown-curso-practico/272185803" target="_blank">
                 <img src="imagen7.jpg" alt="Imagen 7">
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/evangelismo-alternativo-con-clown-curso-practico/272185803" target="_blank" class="link">
-             <p class="subtitle">EVANGELISMO ALTERNATIVO CON CLOWN - CURSO PRÁCTICO</p>
+             <p class="subtitle">EVANGELISMO CON CLOWN - Curso Práctico de Evangelismo Alternativo</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
- <li>Aprende a Evangelizar con CLOWN.</li> <li>¡Las personas recibirán a Cristo una tras otra sin rechazar!
+ <li>Aprende a Evangelizar con CLOWN.</li> <li>¡Las personas RECIBIRÁN A CRISTO una tras otra sin rechazar!
 </li><li>Persona a Persona. </li> <li>Incluye PRÁCTICAS</li>
   </ul>
             </div>
         </div>        
+
+<div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo/272195820" target="_blank">
+                <img src="imagen8.jpg" alt="Imagen 8">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo/272195820" target="_blank" class="link">
+             <p class="subtitle">EVANGELISMO CON MÚSICA - Curso Práctico de Evangelismo Alternativo</p>
+             </a>      
+  <ul class="check-list">         
+             <li><strong>¡ES GRATIS!</strong></li>
+ <li>Aprende a Evangelizar con MÚSICA de una forma distinta y MUY EFECTIVA.</li> <li>¡Verás a las personas RECIBIR A CRISTO una tras otra, sin rechazar!
+</li><li>Usa el TALENTO que Dios te dio y encuentra TU PROPÓSITO.</li> <li>Incluye PRÁCTICAS</li>
+  </ul>
+            </div>
+        </div>        
+        
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank">
                 <img src="imagen3.jpg" alt="Imagen 3">
