--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho/273690778" target="_blank" class="link">
              <p class="subtitle">GUIÓN DE TITERES EVANGELÍSTICO "EL CHECHO" - Evangelismo Alternativo</p>
-             </a>      
+             </a>    
+                <p><s>(VERSIÓN ACTUALIZADA EL 28/11/2024)</s></p>
+                
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>GUIÓN de TÍTERES para EVANGELIZAR en Campaña Masiva.</li>
  <li>¡Harás que 100 personas reciban a Cristo en 1 hora!</li> <li>La mejor Herramienta de Evangelismo Alternativo para Campaña Masiva.
