--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho/273690778" target="_blank" class="link">
              <p class="subtitle">GUIÓN DE TITERES EVANGELÍSTICO "EL CHECHO" - Evangelismo Alternativo</p>
              </a>    
-                <p><s>(VERSIÓN ACTUALIZADA EL 28/11/2024)</s></p>
+                <p><i>(VERSIÓN ACTUALIZADA EL 28/11/2024)</i></p>
                 
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>GUIÓN de TÍTERES para EVANGELIZAR en Campaña Masiva.</li>
