--- a/index.html
+++ b/index.html
@@ -147,13 +147,14 @@
             </div>
   </div>
 <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-titeres-curso-practico-de-evangelismo-alternativo-ab77/272213656" target="_blank">
-                <img src="imagen5.jpg" alt="Imagen 5">
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-titeres-curso-practico/273695992" target="_blank">
+                <img src="imagen10.jpg" alt="Imagen 10">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-titeres-curso-practico-de-evangelismo-alternativo-ab77/272213656" target="_blank" class="link">
-             <p class="subtitle">EVANGELISMO CON TÍTERES - Curso Práctico de Evangelismo Alternativo</p>
-             </a>      
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-titeres-curso-practico/273695992" target="_blank" class="link">
+             <p class="subtitle">CÓMO EVANGELIZAR CON TÍTERES - Curso Práctico</p>
+             </a>     
+                <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
  <li>Aprende a Evangelizar con TÍTERES</li> <li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!
@@ -211,7 +212,7 @@
         </div>
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho/273690778" target="_blank">
-                <img src="imagen9.jpg" alt="Imagen 6">
+                <img src="imagen9.jpg" alt="Imagen 9">
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho/273690778" target="_blank" class="link">
