--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
             </div>
         </div>
         <div class="image-item">
-            <a href="https://es.scribd.com/document/798302105/Guion-de-Titeres-para-Evangelizar-El-Checho" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho-c7ca/273696482" target="_blank">
                 <img src="imagen11.jpg" alt="Imagen 11">
             </a>
             <div class="description">
-            <a href="https://es.scribd.com/document/798302105/Guion-de-Titeres-para-Evangelizar-El-Checho" target="_blank" class="link">
+            <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho-c7ca/273696482" target="_blank" class="link">
              <p class="subtitle">GUIÓN DE TITERES EVANGELÍSTICO "EL CHECHO" - Evangelismo Alternativo</p>
              </a>    
                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
