--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
     
     <div class="image-container">
         <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/curso-practico-de-evangelismo-alternativo-229c/272215527" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-28-11-2024/273699913" target="_blank">
                 <img src="imagen1.jpg" alt="Imagen 1">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/curso-practico-de-evangelismo-alternativo-229c/272215527" target="_blank" class="link">           
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-28-11-2024/273699913" target="_blank" class="link">           
             <p class="subtitle">CURSO PRÁCTICO DE EVANGELISMO ALTERNATIVO</p>
             </a>
+                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">
                 <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!</li><li>¿Quieres aprender ESTRATEGIAS DISTINTAS a las tradicionales?</li><li>¿Quieres Evangelizar aunque NO SEPAS HABLAR bien?</li><li> Persona a Persona y Campaña Masiva.</li>
   </ul>
@@ -165,11 +166,11 @@
         
 <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/evangelismo-con-clown-curso-practico-de-evangelismo-alternativo-31e6/272213021" target="_blank">
-                <img src="imagen7.jpg" alt="Imagen 7">
+                <img src="imagen12.jpg" alt="Imagen 12">
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/evangelismo-con-clown-curso-practico-de-evangelismo-alternativo-31e6/272213021" target="_blank" class="link">
-             <p class="subtitle">EVANGELISMO CON CLOWN - Curso Práctico de Evangelismo Alternativo</p>
+             <p class="subtitle">CÓMO EVANGELIZAR CON CLOWN - Curso Práctico de Evangelismo</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -181,11 +182,11 @@
 
 <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo-afd9/272212576" target="_blank">
-                <img src="imagen8.jpg" alt="Imagen 8">
+                <img src="imagen13.jpg" alt="Imagen 13">
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo-afd9/272212576" target="_blank" class="link">
-             <p class="subtitle">EVANGELISMO CON MÚSICA - Curso Práctico de Evangelismo Alternativo</p>
+             <p class="subtitle">CÓMO EVANGELIZAR CON MÚSICA - Curso Práctico</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -201,7 +202,7 @@
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank" class="link">
-             <p class="subtitle">CRUZ EMOJI</p>
+             <p class="subtitle">CRUZ EMOJI - Herramienta para Evangelizar</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
