--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
         </div>
         
 <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-clown-curso-practico-de-evangelismo-alternativo-31e6/272213021" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-clown-curso-practico/273700431" target="_blank">
                 <img src="imagen12.jpg" alt="Imagen 12">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-clown-curso-practico-de-evangelismo-alternativo-31e6/272213021" target="_blank" class="link">
-             <p class="subtitle">CÓMO EVANGELIZAR CON CLOWN - Curso Práctico de Evangelismo</p>
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-clown-curso-practico/273700431" target="_blank" class="link">
+             <p class="subtitle">CÓMO EVANGELIZAR CON CLOWN - Curso Práctico</p>
              </a>      
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -181,11 +181,11 @@
         </div>        
 
 <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo-afd9/272212576" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-musica-curso-practico/273700533" target="_blank">
                 <img src="imagen13.jpg" alt="Imagen 13">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/evangelismo-con-musica-curso-practico-de-evangelismo-alternativo-afd9/272212576" target="_blank" class="link">
+            <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-musica-curso-practico/273700533" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON MÚSICA - Curso Práctico</p>
              </a>      
   <ul class="check-list">         
