--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
             </div>
         </div>
         <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-la-herramienta-para-evangelizar-evangelismo-alternativo/272215777" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-actualizada-29-11-2024/273700928" target="_blank">
                 <img src="imagen2.jpg" alt="Imagen 2">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-la-herramienta-para-evangelizar-evangelismo-alternativo/272215777" target="_blank" class="link">
-             <p class="subtitle">"i7" EVANGELIZA FÁCIL</p>
+            <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-actualizada-29-11-2024/273700928" target="_blank" class="link">
+             <p class="subtitle">"i7" EVANGELIZA FÁCIL - Herramienta para Evangelizar</p>
              </a>      
+                  <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta muy efectiva para Evangelizar PERSONA A PERSONA. </li>
  <li>Son 7 ILUSTRACIONES para que le muestres a las personas desde la PANTALLA DE TU CELULAR para Evangelizarlas. </li> <li> ¡Incluye 7 ESCRITURAS!</li> <li>Además incluye la CONFESIÓN DE SALVACIÓN.</li><li>Es portátil.</li>
@@ -172,6 +173,7 @@
             <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-clown-curso-practico/273700431" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON CLOWN - Curso Práctico</p>
              </a>      
+                  <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
  <li>Aprende a Evangelizar con CLOWN.</li> <li>¡Las personas RECIBIRÁN A CRISTO una tras otra sin rechazar!
@@ -188,6 +190,7 @@
             <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-musica-curso-practico/273700533" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON MÚSICA - Curso Práctico</p>
              </a>      
+                  <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
  <li>Aprende a Evangelizar con MÚSICA de una forma distinta y MUY EFECTIVA.</li> <li>¡Verás a las personas RECIBIR A CRISTO una tras otra, sin rechazar!
