--- a/index.html
+++ b/index.html
@@ -200,13 +200,14 @@
         </div>        
         
         <div class="image-item">
-            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank">
+            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar-actualizado-28-11-2024/273701255" target="_blank">
                 <img src="imagen3.jpg" alt="Imagen 3">
             </a>
             <div class="description">
-            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar/272132816" target="_blank" class="link">
+            <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar-actualizado-28-11-2024/273701255" target="_blank" class="link">
              <p class="subtitle">CRUZ EMOJI - Herramienta para Evangelizar</p>
              </a>      
+                  <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
  <li>Cabe en un bolsillo.</li> <li> PARA OBSEQUIAR a personas que no tienen tiempo de oirte hablar de Cristo, ellas mismas la desdoblarán paso a paso para descubrirla.
