--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
- <li>Mira el Video para que tú lo hagas igual con tus títeres en vivo y hagas Campañas Evangelísticas masivas en Escuelas o Asentamientos humanos y ¡Harás que 100 personas reciban a Cristo en 1 hora! (Descarga también el Guión en esta web).
+ <li>Mira el Video para que tú lo Ensayes igual y Evangelices en Escuelas o Asentamientos humanos y ¡Harás que 100 personas reciban a Cristo en 1 hora! (Descarga también el Guión en esta web).
 </li>
       <li>¡También le puedes enviar el Link (enlace) del Video a las personas que quieras evangelizar para que ellas mismas lo vean!</li>
   </ul>
