--- a/index.html
+++ b/index.html
@@ -121,18 +121,37 @@
     <div class="image-container">
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-30-11-2024/273740230" target="_blank">
-                <img src="imagen1.jpg" alt="Imagen 1">
+                <img src="imagen21.jpg" alt="Imagen 21">
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-30-11-2024/273740230" target="_blank" class="link">           
             <p class="subtitle">CURSO PRÁCTICO DE EVANGELISMO ALTERNATIVO</p>
             </a>
+                 <p style="color: #73fdff;"><strong><i>**Para CELULAR**</i></strong></p>
                  <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 30/11/2024)</i></strong></p>
   <ul class="check-list">
                 <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!</li><li>¿Quieres aprender ESTRATEGIAS DISTINTAS a las tradicionales?</li><li>¿Quieres Evangelizar aunque NO SEPAS HABLAR bien?</li><li> Persona a Persona y Campaña Masiva.</li>
   </ul>
             </div>
         </div>
+
+<div class="image-container">
+        <div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-30-11-2024-para-imprimir/273743724" target="_blank">
+                <img src="imagen22.jpg" alt="Imagen 22">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-actualizado-30-11-2024-para-imprimir/273743724" target="_blank" class="link">           
+            <p class="subtitle">CURSO PRÁCTICO DE EVANGELISMO ALTERNATIVO</p>
+            </a>
+                <p style="color: #73fdff;"><strong><i>**Para IMPRIMIR**</i></strong></p>
+                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 30/11/2024)</i></strong></p>
+  <ul class="check-list">
+                <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!</li><li>¿Quieres aprender ESTRATEGIAS DISTINTAS a las tradicionales?</li><li>¿Quieres Evangelizar aunque NO SEPAS HABLAR bien?</li><li> Persona a Persona y Campaña Masiva.</li>
+  </ul>
+            </div>
+        </div>
+        
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-actualizada-30-11-2024/273740277" target="_blank">
                 <img src="imagen2.jpg" alt="Imagen 2">
