--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
              </a>      
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 30/11/2024)</i></strong></p>
   <ul class="check-list">         
-             <li><strong>¡ES GRATIS!</strong></li><li>Es una “i7” (7 ilustraciones para EVANGELIZAR) modificada para que la puedas OBSEQUIAR (por whatsapp o impresa) directamente a personas que aún no son Cristianos (tus familiares, tus amigos, conocidos, etc.), para que ellos mismos la lean y puedan hacer la CONFESIÓN DE SALVACIÓN sin que tú les ayudes!</li>
+             <li><strong>¡ES GRATIS!</strong></li><li>¡POR FIN! Tus Familiares y Amigos podrán obtener Salvación y Vida eterna. </li><li>
+¿Y AHORA QUE HAGO? es un PDF con 7 ilustraciones para que lo COMPARTAS por WHATSAPP o impreso DIRECTAMENTE a personas que AÚN no son Cristianos (tus Familiares, tus Amigos, conocidos, etc.) para que ELLOS MISMOS lo lean y puedan hacer la CONFESIÓN DE SALVACIÓN sin que tú les ayudes!</li>
   </ul>
             </div>
   </div>
