--- a/index.html
+++ b/index.html
@@ -135,7 +135,24 @@
             </div>
         </div>
 
-        
+         <div class="image-container">
+        <div class="image-item">
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-para-imprimir-actualizado-04-12-2024/273842096" target="_blank">
+                <img src="imagen22.jpg" alt="Imagen 22">
+            </a>
+            <div class="description">
+            <a href="https://es.slideshare.net/slideshow/curso-practico-evangelismo-alternativo-para-imprimir-actualizado-04-12-2024/273842096" target="_blank" class="link">           
+            <p class="subtitle">CURSO PRÁCTICO DE EVANGELISMO ALTERNATIVO</p>
+            </a>
+                 <p style="color: #00ff00;"><strong><i>**Para IMPRIMIR**</i></strong></p>
+                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 04/12/2024)</i></strong></p>
+  <ul class="check-list">
+                <li><strong>¡ES GRATIS!</strong></li><li>¡Haz que 100 PERSONAS reciban a Cristo en 1 HORA!</li><li>¿Quieres aprender ESTRATEGIAS DISTINTAS a las tradicionales?</li><li>¿Quieres Evangelizar aunque NO SEPAS HABLAR bien?</li><li> Persona a Persona y Campaña Masiva.</li>
+  </ul>
+            </div>
+        </div>
+
+                
         <div class="image-item">
             <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-actualizada-02-12-2024-3608/273788490" target="_blank">
                 <img src="imagen2.jpg" alt="Imagen 2">
