--- a/index.html
+++ b/index.html
@@ -316,11 +316,13 @@
             </a>
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/moldes-titere-biblia-2-hojas-a3-actualizado-04-12-2024/273847756" target="_blank" class="link">
-             <p class="subtitle">MOLDES PARA TÍTERE DE BIBLIA (2 hojas tamaño A3)</p>
+             <p class="subtitle">MOLDES PARA TÍTERE DE BIBLIA para IMPRIMIR A3</p>
              </a>      
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 04/12/2024)</i></strong></p>
+               
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
+             <i>Para imprimir 2 hojas tamaño A3</i>
                 
   </ul>
             </div>
