--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/i7-evangeliza-facil-actualizada-02-12-2024-3608/273788490" target="_blank" class="link">
              <p class="subtitle">"i7" EVANGELIZA FÁCIL - Herramienta para Evangelizar</p>
-             </a>      
+             </a>     
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 02/12/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta muy efectiva para Evangelizar PERSONA A PERSONA. </li>
@@ -177,6 +178,7 @@
             <a href="https://es.slideshare.net/slideshow/y-ahora-que-hago-herramienta-para-evangelizar-actualizado-02-12-2024-64fd/273788436" target="_blank" class="link">
              <p class="subtitle">¿Y AHORA QUE HAGO? - Herramienta para EVANGELIZAR</p>
              </a>      
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 02/12/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>¡POR FIN! Tus Familiares y Amigos podrán obtener Salvación y Vida eterna. </li><li>
@@ -194,6 +196,7 @@
             <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-titeres-curso-practico-actualizado-30-11-2024/273740144" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON TÍTERES - Curso Práctico</p>
              </a>     
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 30/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -232,6 +235,7 @@
             <a href="https://es.slideshare.net/slideshow/guion-de-titeres-para-evangelizar-el-checho-actualizado-04-12-2024/273846064" target="_blank" class="link">
              <p class="subtitle">GUIÓN DE TÍTERES PARA EVANGELIZAR "EL CHECHO"</p>
              </a>    
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                 <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 04/12/2024)</i></strong></p>
                 
   <ul class="check-list">         
@@ -250,6 +254,7 @@
             <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-clown-curso-practico/273700431" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON CLOWN - Curso Práctico</p>
              </a>      
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -267,6 +272,7 @@
             <a href="https://es.slideshare.net/slideshow/como-evangelizar-con-musica-curso-practico/273700533" target="_blank" class="link">
              <p class="subtitle">CÓMO EVANGELIZAR CON MÚSICA - Curso Práctico</p>
              </a>      
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li>
@@ -284,6 +290,7 @@
             <a href="https://es.slideshare.net/slideshow/cruz-emoji-herramienta-para-evangelizar-actualizado-28-11-2024/273701255" target="_blank" class="link">
              <p class="subtitle">CRUZ EMOJI - Herramienta para Evangelizar</p>
              </a>      
+                 <p style="color: #00ff00;"><strong><i>**Para CELULAR** (Sólo informativa)</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 28/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Es una Herramienta para Evangelizar. </li>
@@ -301,7 +308,8 @@
             <div class="description">
             <a href="https://es.slideshare.net/slideshow/encaminar-para-imprimir-a4-recomendaciones-para-nuevos-creyentes-actualizado-30-11-2024/273741084" target="_blank" class="link">
              <p class="subtitle">ENCAMINAR para IMPRIMIR A4 - Recomendaciones para nuevos Creyentes</p>
-             </a>      
+             </a>   
+                 <p style="color: #00ff00;"><strong><i>**Para IMPRIMIR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 30/11/2024)</i></strong></p>
   <ul class="check-list">         
              <li><strong>¡ES GRATIS!</strong></li><li>Son 4 “Recomendaciones para ENCAMINAR” en una sola Hoja A4 lista para imprimir y fotocopiar, para que la obsequies a las personas que Evangelices DESPUÉS de que ya hayan hecho la Confesión de Salvación. 
@@ -318,6 +326,7 @@
             <a href="https://es.slideshare.net/slideshow/moldes-titere-biblia-2-hojas-a3-actualizado-04-12-2024/273847756" target="_blank" class="link">
              <p class="subtitle">MOLDES PARA TÍTERE DE BIBLIA para IMPRIMIR A3</p>
              </a>      
+                 <p style="color: #00ff00;"><strong><i>**Para IMPRIMIR**</i></strong></p>
                   <p style="color: #73fdff;"><strong><i>(ACTUALIZADO 04/12/2024)</i></strong></p>
                
   <ul class="check-list">         
